<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    android:orientation="vertical">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:fontFamily="roboto-light"
            android:text="@string/user_name"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"

            android:text=":"

            android:textSize="20dp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.8"
            android:gravity="top|bottom"
            android:paddingRight="5dp"
            android:textColor="#135b97"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:fontFamily="roboto-light"
            android:text="@string/password"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"

            android:text=":"

            android:textSize="20dp" />

        <TextView
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1.8"
            android:gravity="top|bottom"
            android:paddingRight="5dp"
            android:textColor="#135b97"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:fontFamily="roboto-light"
            android:text="@string/Mobile_Number"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:text=":"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/mobilenumber"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.8"
            android:gravity="top|bottom"
            android:paddingRight="5dp"
            android:textColor="#135b97"

            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:id="@+id/OffenceType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:fontFamily="roboto-light"
            android:text="@string/Email"

            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:text=":"
            android:textSize="20dp"

            />

        <TextView
            android:id="@+id/mailid"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.8"
            android:gravity="top|bottom"
            android:paddingRight="5dp"
            android:textColor="#135b97"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"

            android:layout_weight="1"
            android:fontFamily="roboto-light"
            android:text="@string/dob"
            android:textColor="@color/colorAccent"

            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_weight="0.2"

            android:text=":"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.8"
            android:gravity="top|bottom"
            android:paddingRight="5dp"
            android:textColor="#135b97"

            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"

            android:layout_weight="1"
            android:fontFamily="roboto-light"
            android:text="Qualification"
            android:textColor="@color/colorAccent"

            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:text=":"

            android:textSize="20dp" />

        <TextView
            android:id="@+id/qualification"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.8"
            android:gravity="top|bottom"
            android:paddingRight="5dp"
            android:textColor="#135b97"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"

            android:layout_weight="1"
            android:fontFamily="roboto-light"
            android:text="User Profile Pic"
            android:textColor="@color/colorAccent"

            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:text=":"

            android:textSize="20dp" />

        <ImageView
            android:id="@+id/userpic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1.8" />

    </TableRow>
</LinearLayout>

